--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Pump</title>
+    <link rel="canonical" href="https://pumpdev.org" />
     <meta
       name="description"
-      content="Pump the developer | Commissions are OPENED!"
+      content="A Software Engineer. Commissions are OPENED!"
     />
+    <meta property="og:site_name" content="Pump development">
+    <meta property="og:title" content="Pump the developer" />
+    <meta property="og:description" content="A Software Engineer. Commissions are OPENED!" />
+    <meta name="google" content="notranslate" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Pump</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
